--- a/life3/static/react/package.json
+++ b/life3/static/react/package.json
@@ -16,12 +16,12 @@
     "babel-preset-react": "^6.5.0",
     "history": "^2.1.1",
     "react": "^15.0.1",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^15.0.1",
     "react-hot-loader": "^1.3.0",
     "react-router": "^2.4.0",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1",
-    "whatwg-fetch": "^2.0.3",
-    "react-bootstrap": "^0.31.0"
+    "whatwg-fetch": "^2.0.3"
   }
 }
